overlapping fixed and aligned pastries

--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,12 @@ body {
     background-image: repeating-linear-gradient(45deg, #f74545 25%, transparent 25%, transparent 75%, #f74545 75%, #f74545), repeating-linear-gradient(45deg, #f74545 25%, #e5e5f7 25%, #e5e5f7 75%, #f74545 75%, #f74545);
     background-position: 0 0, 10px 10px;
     background-size: 20px 20px;
-    padding: 80px;
+    padding: 40px;
     border-radius: 10px;
     width: 80%;
-    position: relative; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
   }
   
   .pastry {
@@ -26,7 +28,7 @@ body {
     padding: 20px;
     border-radius: 50%;
     font-size: 18px;
-    position: absolute; 
+    background-color:white 
   }
   
   .pastry img {
